fix header hover and spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,7 +39,7 @@
 body {
   font-family: "Atkinson", sans-serif;
   margin: 0;
-  padding: 0;
+  padding-top: 100px;
   text-align: left;
   background: var(--ivory);
   word-wrap: break-word;
